add user endpoint and schema architecture

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Un chat como telegram, pero mucho mejor",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "chat",
