--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
 }
