--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-uploads/
+public/files/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
